--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
               with:
-                ref: main
+                ref: master
             - name: ZAP Scan
               uses: zaproxy/action-baseline@v0.14.0
               with:
