--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
               #The --version argument is optional. If it is omitted the latest version will be installed
               run: |
                 New-Item -Path .\.sonar\scanner -ItemType Directory
-                donet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+                dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
 
             - name: Build
               shell: powershell
