--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,87 +1,93 @@
-name: Build code, run unit test, run SAST, SCA, DAST security scans for .NET App
-on: 
-    push:
-        branches: 
-            - master
-    pull_request:
-        types: 
-         - opened
-         - synchronize
-         - reopened
+name: Build .Net Pipeline
+
+on:
+  # Trigger analysis when pushing in master or pull requests, and when creating
+  # a pull request.
+  push:
+    branches:
+      - master
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 jobs:
-    sonarcloud:
-        name: SonarCloud scan for SAST
-        runs-on: windows-latest
-        steps:
-            - uses: actions/checkout@v4
-              with:
-                fetch-depth: 0
-            - name: set up JDK 21
-              uses: actions/setup-java@v4
-              with: 
-                java-version: '21'
-                distribution: 'microsoft'
-            
-            #Speed up analysis by caching the scanner workspace
-            - name: Cache SonarCloud Workspace
-              uses: actions/cache@v4
-              with:
-                path: ~\.sonar\cache
-                key: ${{ runner.os }}-sonar-cache
-                restore-keys: ${{ runner.os }}-sonar-cache
+  sonarcloud:
+    name: SonarCloud scan for SAST 
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'microsoft'
 
-            #Speed up analysis by caching the scanner installation
-            - name: Cache SonarCloud scanner
-              id: cache-sonar-scanner
-              uses: actions/cache@v4
-              with: 
-                path: .\sonar\scanner
-                key: ${{ runner.os }}-sonar-scanner
-                restore-keys: ${{ runner.os }}-sonar-scanner
+      # Speed-up analysis by caching the scanner workspace
+      - name: Cache SonarCloud workspace
+        uses: actions/cache@v4
+        with:
+          path: ~\.sonar\cache
+          key: ${{ runner.os }}-sonar-cache
+          restore-keys: ${{ runner.os }}-sonar-cache
 
-            - name: Install SonarCloud scanner
-              if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-              shell: powershell
-              #The --version argument is optional. If it is omitted the latest version will be installed
-              run: |
-                New-Item -Path .\.sonar\scanner -ItemType Directory
-                dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      # Speed-up analysis by caching the scanner installation
+      - name: Cache SonarCloud scanner
+        id: cache-sonar-scanner
+        uses: actions/cache@v4
+        with:
+          path: .\.sonar\scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
 
-            - name: Build
-              shell: powershell
-              env: 
-                #need to get some information about the pull request, if any
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: |
-                .\.sonar\scanner\dotnet-sonarscanner begin /k:"wstran118_devsecops-dotnet-github-actions-end-to-end-assignment" /o:"wstran118" d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-                dotnet build SomeConsoleApplication.sln
-                .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+      - name: Install SonarCloud scanner
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        shell: powershell
+        # The --version argument is optional. If it is omitted the latest version will be installed.
+        run: |
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner 
 
-    security: 
-        runs-on: ubuntu-latest
-        needs: sonarcloud
-        name: Run the SCA scan on the source code
-        steps:
-            - uses: actions/checkout@master
-            - name: RunSnyk to check for vulnerabilities
-              uses: snyk/actions/dotnet@master
-              continue-on-error: true
-              env: 
-                SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-    zap_scan:
-        runs-on: ubuntu-latest
-        needs: security
-        name: Run DAST scan on the web application
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-              with:
-                ref: master
-            - name: ZAP Scan
-              uses: zaproxy/action-baseline@v0.14.0
-              with:
-                target: 'http://testphp.vulnweb.com/'
-                rules_file_name: '.zap/rules.tsv'
-                cmd_options: '-a'    
-            
+      - name: Build
+        shell: powershell
+        env:
+          # Needed to get some information about the pull request, if any
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # The secret referenced in the command-line by SONAR_TOKEN should be generated
+          # from https://sonarcloud.io/account/security/
+          # The organization and project arguments (see /o and /k) are displayed
+          # on the project dashboard in SonarCloud.
+        run: |
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"wstran118_devsecops-dotnet-github-actions-end-to-end-assignment" /o:"wstran118" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          dotnet build SomeConsoleApplication.sln
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+  security:
+    runs-on: ubuntu-latest
+    needs: sonarcloud
+    name: Run the SCA scan on the source code
+    steps:
+      - uses: actions/checkout@master
+      - name: RunSnyk to check for vulnerabilities
+        uses: snyk/actions/dotnet@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  zap_scan:
+    runs-on: ubuntu-latest
+    needs: security
+    name: Run DAST scan on the web application
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: master
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.14.0
+        with:
+          target: 'http://testphp.vulnweb.com/'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
